--- a/css/events.css
+++ b/css/events.css
@@ -1,30 +1,13 @@
 body {
-  background: radial-gradient(#f1f1f1, #acacac);
   background-repeat: no-repeat;
-  height: 100vh;
-  overflow: hidden;
+  background-color: #17141d;
+  overflow-x: hidden;
 }
 
 #logo {
   max-height: 400px;
   position: fixed;
   z-index: -5;
-}
-
-#log-reg-body {
-  -webkit-box-shadow: 0px 0px 13px #212121;
-          box-shadow: 0px 0px 13px #212121;
-}
-
-#logo-container {
-  -webkit-filter: invert(100%);
-          filter: invert(100%);
-  height: 100vh;
-}
-
-.nav-item {
-  color: #0a557b !important;
-  margin-right: 20px;
 }
 
 #particle-bg {
@@ -35,25 +18,107 @@ body {
   right: 0;
 }
 
-.nav-link {
-  color: #0a557b;
-  cursor: pointer;
+#nav-bar {
+  position: fixed;
+  z-index: 5;
 }
 
-#non-technical-events-con, #technical-events-con {
-  height: 41vh;
-  background-color: rgba(255, 255, 255, 0.3);
-  margin-bottom: 20px;
-  opacity: 0.8;
-  -webkit-transition: all 600ms linear;
-  transition: all 600ms linear;
-  border-radius: 8px;
+.hackerz-brand {
+  font-size: 1.2em;
+  position: relative;
+  top: 18px;
 }
 
-#non-technical-events-con:hover, #technical-events-con:hover {
-  border: 1px solid #000;
-  -webkit-box-shadow: 0 0 5px #212121;
-          box-shadow: 0 0 5px #212121;
+.event-container {
+  height: 100vh;
+}
+
+.container2 {
+  height: 300px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  overflow-x: scroll;
+  padding: 20px;
+  padding-left: auto;
+  overflow-y: hidden;
+}
+
+.container2::-webkit-scrollbar {
+  height: 0px;
+}
+
+.container2::-webkit-scrollbar {
+  height: 4px;
+}
+
+.container2:hover::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+          box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #fff;
+}
+
+.card2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 280px;
+  min-width: 300px;
+  background-color: #17141d;
+  border-radius: 10px;
+  -webkit-box-shadow: -1rem 0 1rem #000;
+          box-shadow: -1rem 0 1rem #000;
+  /*   margin-left: -50px; */
+  -webkit-transition: 0.4s ease-out;
+  transition: 0.4s ease-out;
+  position: relative;
+  left: 0px;
+}
+
+.card2:not(:first-child) {
+  margin-left: -50px;
+}
+
+.card2:hover {
+  -webkit-transform: translateY(-20px);
+          transform: translateY(-20px);
+  -webkit-transition: 0.9s ease-out;
+  transition: 0.9s ease-out;
+}
+
+.card2:hover ~ .card2 {
+  position: relative;
+  left: 50px;
+  -webkit-transition: 0.4s ease-out;
+  transition: 0.4s ease-out;
+}
+
+.title {
+  color: #fff;
+  font-weight: 300;
+  position: absolute;
+  left: 20px;
+  top: 15px;
+}
+
+.desc {
+  color: #fff;
+  font-size: 1rem;
+  margin: 5px;
+  padding: 5px;
+  position: absolute;
+  left: 10px;
+  top: 70px;
+  opacity: 0;
+  -webkit-transition: all 0.4s linear;
+  transition: all 0.4s linear;
+}
+
+.card2:hover .desc {
   opacity: 1;
 }
 /*# sourceMappingURL=events.css.map */
