--- a/css/events.scss
+++ b/css/events.scss
@@ -1,10 +1,12 @@
 body {
-    background: radial-gradient(#f1f1f1, #acacac);
+    // background: radial-gradient(#f1f1f1, #acacac);
     //   background: radial-gradient(#e66465, #9198e5);
     // background: #fff;
     background-repeat: no-repeat;
-    height: 100vh;
-    overflow: hidden;
+    background-color:  #17141d;
+    // background-image: radial-gradient(#17141d, #fff) !important;
+    // height: 100vh;
+    overflow-x: hidden;
   }
   #logo {
     max-height: 400px;
@@ -12,39 +14,132 @@ body {
     z-index: -5;
     
   }
-  #log-reg-body{
-    box-shadow: 0px 0px 13px #212121;
-  }
-  #logo-container {
-    filter: invert(100%);
-    height: 100vh;
-  }
-  .nav-item{
-    color: #0a557b !important;
-    margin-right: 20px;
-  }
+  
   #particle-bg{
     position: fixed;
     z-index: -3;
     height: 100vh;
     left: 0;
     right: 0;
-  }  
+  }
 
-.nav-link{
-    color: #0a557b;
-    cursor: pointer;
+#nav-bar{
+  position: fixed;
+  z-index: 5;
 }
-#non-technical-events-con, #technical-events-con{
-    height: 41vh;
-    background-color: rgba($color: #fff, $alpha: 0.3);
-    margin-bottom: 20px;
-    opacity: 0.8;
-    transition: all 600ms linear;
-    border-radius: 8px;
+.hackerz-brand{
+  font-size: 1.2em;
+  position: relative;
+  top: 18px;
 }
-#non-technical-events-con:hover, #technical-events-con:hover{
-    border: 1px solid #000;
-    box-shadow: 0 0 5px #212121;
-    opacity: 1;
+.event-container{
+  height: 100vh;
+}
+  .container2 {
+    // position: absolute;
+    height: 300px;
+    // width: 100vw;
+    // top: 60px;
+    // left: calc(50% - 300px);
+    display: flex;
+    justify-content: center;
+    overflow-x: scroll;
+    padding: 20px;
+    padding-left: auto;
+    overflow-y: hidden;
+  }
+
+  .container2::-webkit-scrollbar {
+    height: 0px;
+  }
+  .container2::-webkit-scrollbar {
+    height: 4px;
+  }
+  
+  .container2:hover::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #fff;
+    // background-image: linear-gradient(#005c97, #363795);
+  }
+  
+// #non-technical, #technical, #workshops{
+//     height: 41vh;
+//     background-color: rgba($color: #fff, $alpha: 0.3);
+//     margin-bottom: 20px;
+//     opacity: 0.8;
+//     transition: all 600ms linear;
+//     border-radius: 8px;
+// }
+// #non-technical:hover, #technical:hover, #workshops:hover{
+//     border: 1px solid #000;
+//     box-shadow: 0 0 5px #212121;
+//     opacity: 1;
+// }
+
+.card2 {
+  display: flex;
+  height: 280px;
+  // width: 400px;
+  min-width: 300px;
+  background-color: #17141d;
+  // background-image: url(../images/main.png);
+  border-radius: 10px;
+  box-shadow: -1rem 0 1rem #000;
+/*   margin-left: -50px; */
+  transition: 0.4s ease-out;
+  position: relative;
+  left: 0px;
+}
+// .slide-top {
+// 	// -webkit-animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.2s forwards;
+// 	        animation: slide-top 0.5s 0.2s forwards;
+// }
+// @keyframes slide-top {
+//   0% {
+//       -webkit-transform: translateY(0);
+//       transform: translateY(0)
+//   }
+//   to {
+//       -webkit-transform: translateY(-20%);
+//       transform: translateY(-20%)
+//   }
+// }
+.card2:not(:first-child) {
+    margin-left: -50px;
+}
+
+.card2:hover {
+  transform: translateY(-20px);
+  transition: 0.9s ease-out;
+}
+
+.card2:hover ~ .card2 {
+  position: relative;
+  left: 50px;
+  transition: 0.4s ease-out;
+}
+
+.title {
+  color: #fff;
+  font-weight: 300;
+  position: absolute;
+  left: 20px;
+  top: 15px;
+}
+
+.desc{
+  color: #fff;
+  font-size: 1rem;
+  margin: 5px;
+  padding: 5px;
+  position: absolute;
+  left: 10px;
+  top: 70px;
+  opacity: 0;
+  transition: all 0.4s linear;
+}
+
+.card2:hover .desc{
+  opacity: 1;
 }
