--- a/public/css/events.css
+++ b/public/css/events.css
@@ -1,11 +1,248 @@
+@media screen and (max-width: 900px) {
+  .grid {
+    display: flex !important;
+    flex-direction: column !important;
+    justify-content: space-between !important;
+    width: 80% !important;
+    margin: auto !important;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  #technical .item1 {
+    grid-area: 1 / 1 /span 1 / span 4;
+  }
+  #technical .item2 {
+    grid-area: 1 / 5 / span 1 / span 4;
+  }
+  #technical .item3 {
+    grid-area: 1 / 9 / span 1 / span 4;
+  }
+  #technical .item4 {
+    grid-area: 2 / 3 / span 1 / span 4;
+  }
+  #technical .item5 {
+    grid-area: 2 / 7 / span 1 / span 4;
+  }
+  #technical .item6 {
+    grid-area: 3 / 5 / span 1 / span 4
+  }
+  /* ------------------------------------------------ */
+  #non-technical .item1 {
+    grid-area: 1 / 1 /span 1 / span 4;
+  }
+  #non-technical .item2 {
+    grid-area: 1 / 5 / span 1 / span 4;
+  }
+  #non-technical .item3 {
+    grid-area: 1 / 9 / span 1 / span 4;
+  }
+  #non-technical .item4 {
+    grid-area: 1 / 13 / span 1 / span 4;
+  }
+  #non-technical .item5 {
+    grid-area: 2 / 3 / span 1 / span 4;
+  }
+  #non-technical .item6 {
+    grid-area: 2 / 7 / span 1 / span 4
+  }
+  #non-technical .item7 {
+    grid-area: 2 / 11 / span 1 / span 4
+  }
+  /* ------------------------------------------------ */
+}
+
+#events .grid {
+  margin: 50px auto;
+  display: grid;
+  width: 50%;
+  grid-template: repeat(2, 1fr) / repeat(2, 1fr);
+}
+
+#technical .grid {
+  display: grid;
+  width: 60%;
+  grid-template: repeat(3, 1fr) / repeat(12, 1fr);
+}
+
+#non-technical .grid {
+  display: grid;
+  width: 80%;
+  grid-template: repeat(2, 1fr) / repeat(16, 1fr);
+}
+
+#workshops .grid, #gaming .grid {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 100px auto;
+}
+
+.hideableLogo, .hiddenLogo {
+  width: 100px;
+  height: 100px;
+}
+
+.hideableLogo {
+  display: block;
+}
+
+.hiddenLogo {
+  display: none;
+}
+
+.card2:hover .hideableLogo {
+  display: none;
+}
+
+.card2:hover .hiddenLogo {
+  display: block;
+}
+
+nav {
+  position: fixed;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0px 15px;
+  padding: 5px;
+  z-index: 5;
+  background-color: #121214;
+}
+
+.event-container {
+  position: absolute;
+  top: 100px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
 body {
   background-repeat: no-repeat;
-  background-color: #000;
+  background-color: #121214;
   overflow-x: hidden;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+#login-btn {
+  color: white;
+  text-decoration: none;
+  border: 1px solid white;
+  border-radius: 5px;
+  padding: 10px 20px;
+  margin-right: 30px;
+}
+
+#login-btn:hover {
+  color: black;
+  background: white;
+}
+
+.title {
+  width: 100%;
+  text-align: center;
+  color: #fff;
+  margin: 15px auto;
+  font-weight: 300;
+  display: inline-block;
+  transition: width .5s ease-out;
+  -webkit-transition: width .5s ease-out;
+}
+
+.card2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 280px;
+  margin: 4px;
+  min-width: 300px;
+  background-color: #17141d;
+  border-radius: 10px;
+  -webkit-box-shadow: 0rem 0 1rem #000;
+  box-shadow: 0rem 0 1rem #000;
+  -webkit-transition: 0.4s ease-out;
+  transition: 0.4s ease-out;
+  position: relative;
+}
+
+#events .card2 {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.card2 .title {
+  color: #fff;
+  font-weight: 300;
+  position: absolute;
+  top: 15px;
+}
+
+.card2:not(.spz):hover .title {
+  width: fit-content;
+  left: 20px;
+}
+
+.card2:hover {
+  border: 1px solid #0cebeb;
+}
+
+.desc {
+  color: #fff;
+  font-size: 1rem;
+  margin: 5px;
+  padding: 5px;
+  position: absolute;
+  left: 10px;
+  top: 70px;
+  opacity: 0;
+  -webkit-transition: all 0.4s linear;
+  transition: all 0.4s linear;
+}
+
+.bttn {
+  height: fit-content;
+  position: absolute;
+  bottom: 30px;
+  left: 20px;
+  color: white;
+  text-decoration: none;
+  padding: 10px 20px;
+  border: 1px solid white;
+  border-radius: 5px;
+  opacity: 0;
+}
+
+.bttn:hover {
+  text-decoration: none;
+  background: #0cebeb;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #29ffc6, #20e3b2, #0cebeb);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #29ffc6, #20e3b2, #0cebeb);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  color: #17141d;
+}
+
+.card2:hover .desc, .card2:hover .bttn {
+  opacity: 1;
+}
+
+button:focus {
+  outline: 0;
 }
 
 #logo {
@@ -33,10 +270,6 @@ body {
   top: 18px;
 }
 
-.event-container {
-  height: 100vh;
-}
-
 .event-header {
   font-size: 2rem;
   text-align: center;
@@ -49,7 +282,7 @@ body {
   text-align: center;
   letter-spacing: 0.01em;
   -webkit-transform: scale3d(1, 1, 1);
-          transform: scale3d(1, 1, 1);
+  transform: scale3d(1, 1, 1);
 }
 
 .glitch::before, .glitch::after {
@@ -157,15 +390,15 @@ body {
   padding: 40px 0 0 40px;
   overflow-y: hidden;
   -webkit-box-pack: inherit;
-      -ms-flex-pack: inherit;
-          justify-content: inherit;
+  -ms-flex-pack: inherit;
+  justify-content: inherit;
 }
 
 @media (min-width: 884px) {
   #workshops .container2 {
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
   }
 }
 
@@ -173,113 +406,15 @@ body {
   height: 4px;
 }
 
-body::-webkit-scrollbar,
-.modal::-webkit-scrollbar {
+body::-webkit-scrollbar, .modal::-webkit-scrollbar {
   width: 4px;
 }
 
-.container2::-webkit-scrollbar-thumb,
-body::-webkit-scrollbar-thumb,
-.modal::-webkit-scrollbar-thumb {
+.container2::-webkit-scrollbar-thumb, body::-webkit-scrollbar-thumb, .modal::-webkit-scrollbar-thumb {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-          box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #fff;
 }
 
-.title {
-  color: #fff;
-  font-weight: 300;
-}
-
-.card2 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 280px;
-  min-width: 300px;
-  background-color: #17141d;
-  border-radius: 10px;
-  -webkit-box-shadow: -1rem 0 1rem #000;
-          box-shadow: -1rem 0 1rem #000;
-  -webkit-transition: 0.4s ease-out;
-  transition: 0.4s ease-out;
-  position: relative;
-  left: 0px;
-}
-
-.card2 .title {
-  color: #fff;
-  font-weight: 300;
-  position: absolute;
-  left: 20px;
-  top: 15px;
-}
-
-.card2:not(:first-child) {
-  margin-left: -50px;
-}
-
-.card2:hover {
-  -webkit-transform: translateY(-20px);
-          transform: translateY(-20px);
-  -webkit-transition: 0.9s ease-out;
-  transition: 0.9s ease-out;
-}
-
-.card2:hover ~ .card2 {
-  position: relative;
-  left: 50px;
-  -webkit-transition: 0.4s ease-out;
-  transition: 0.4s ease-out;
-}
-
-.desc {
-  color: #fff;
-  font-size: 1rem;
-  margin: 5px;
-  padding: 5px;
-  position: absolute;
-  left: 10px;
-  top: 70px;
-  opacity: 0;
-  -webkit-transition: all 0.4s linear;
-  transition: all 0.4s linear;
-}
-
-.bttn {
-  height: 40px;
-  opacity: 01;
-  opacity: 0;
-  -webkit-transition: all 0.4s linear;
-  transition: all 0.4s linear;
-  background-color: transparent;
-  color: #fff;
-  position: relative;
-  top: 80%;
-  left: 4%;
-  border: 1px solid #fff;
-  font-size: 0.8rem;
-  border-radius: 6px;
-  -webkit-box-shadow: 0 0 6px #17141d;
-          box-shadow: 0 0 6px #17141d;
-  padding: 5px 12px;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.bttn:hover {
-  text-decoration: none;
-  background-color: #fff;
-  color: #17141d;
-}
-
-.card2:hover .desc,
-.card2:hover .bttn {
-  opacity: 1;
-}
-
-button:focus {
-  outline: 0;
-}
-/*# sourceMappingURL=events.css.map */
+/* ----------------------------------------------------------------------------------------------------------------------*/
