--- a/public/css/events.css
+++ b/public/css/events.css
@@ -53,7 +53,7 @@
 }
 
 #events .grid {
-  margin: 50px auto;
+  margin: 10px auto;
   display: grid;
   width: 50%;
   grid-template: repeat(2, 1fr) / repeat(2, 1fr);
@@ -136,13 +136,49 @@ body {
   user-select: none;
 }
 
+.menu-item {
+  color: white;
+  text-decoration: none;
+  /* border: 1px solid white; */
+  /* border-radius: 5px; */
+  padding: 10px 10px;
+  margin-right: 30px;
+}
+
 #login-btn {
+  display: none;
   color: white;
   text-decoration: none;
   border: 1px solid white;
   border-radius: 5px;
-  padding: 10px 20px;
+  padding: 10px 10px;
   margin-right: 30px;
+}
+
+#logout-btn {
+  display: none;
+  color: #FF2323;
+  text-decoration: none;
+  border: 1px solid #FF2323;
+  border-radius: 5px;
+  padding: 10px 10px;
+  margin-right: 30px;
+}
+
+#logout-btn:hover {
+  color: white;
+  cursor: pointer;
+  background: #FF2323;
+}
+
+#profile {
+  display: none;
+  transform: rotateY(180deg);
+  color: white;
+  padding: 10px 10px;
+  margin-right: 30px;
+  max-width: 125px;
+  cursor: pointer;
 }
 
 #login-btn:hover {
@@ -274,11 +310,12 @@ button:focus {
 .event-header {
   font-size: 2rem;
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .glitch {
   position: relative;
-  margin: 0 auto;
+  margin: 0 auto 20px auto;
   color: #c1c1c1;
   text-align: center;
   letter-spacing: 0.01em;
