--- a/public/css/single_event.css
+++ b/public/css/single_event.css
@@ -62,7 +62,6 @@
 }
 
 #register-btn {
-  width: 100%;
   color: black;
   padding: 10px;
   border: 1px solid #0cebeb;
@@ -93,6 +92,12 @@
 
 .description {
   margin: 35px auto;
+}
+
+.error-message {
+  text-align: center;
+  display: none;
+  color: #FF2323;
 }
 
 .event-container {
@@ -138,12 +143,24 @@ nav {
 }
 
 #login-btn {
+  display: none;
   color: white;
   text-decoration: none;
   border: 1px solid white;
   border-radius: 5px;
-  padding: 10px 20px;
+  padding: 10px 10px;
   margin-right: 30px;
+  max-width: 125px;
+}
+
+#profile {
+  display: none;
+  transform: rotateY(180deg);
+  color: white;
+  padding: 10px 10px;
+  margin-right: 30px;
+  max-width: 125px;
+  cursor: pointer;
 }
 
 #login-btn:hover {
