--- a/public/css/events.css
+++ b/public/css/events.css
@@ -1,3 +1,9 @@
+.logo {
+  max-height: 60px;
+  display: inline-block;
+  padding: 0 15px;
+}
+
 @media screen and (max-width: 900px) {
   .grid {
     display: flex !important;
