--- a/public/css/single_event.css
+++ b/public/css/single_event.css
@@ -1,3 +1,9 @@
+.logo {
+  max-height: 60px;
+  display: inline-block;
+  padding: 0 15px;
+}
+
 @media screen and (max-width: 900px) {
   .event-container {
     width: 95% !important;
