--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,11 @@
+body::-webkit-scrollbar, body::-webkit-scrollbar-thumb {
+  width: 4px;
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #fff;
+}
+
 .nav {
   margin: 20px auto;
   display: flex;
@@ -44,13 +52,13 @@
 
 .btn:nth-child(odd):hover {
   background: #0cebeb;
-    /* fallback for old browsers */
-    background: -webkit-linear-gradient(to left, #29ffc6, #20e3b2, #0cebeb);
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to left, #29ffc6, #20e3b2, #0cebeb);
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    color: black !important;
-    text-decoration: none;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #29ffc6, #20e3b2, #0cebeb);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #29ffc6, #20e3b2, #0cebeb);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  color: black !important;
+  text-decoration: none;
 }
 
 .wrapper {
@@ -69,9 +77,9 @@ body {
   background-repeat: no-repeat;
   font-family: 'VT323', monospace;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .collegeLogo {
